# glue-deficiency-gcc

./: .gitignore  CMakeLists.txt
include/: data.h  detect.h  feature.h  func.h  roi.h  segment.h
src/: data.cpp  detect.cpp  feature.cpp  func.cpp  main.cpp  roi.cpp  segment.cpp
